# store-ontology

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  playwright.config.js  pyproject.toml  requirements.txt  test_deep_agent_agui.py
agent/: cli.py  main.py  pyproject.toml  state.py
agent/engine/: action_log.py  action_log_repo.py  admin_ontology_api.py  auth.py  auth_audit.py  bootstrap.py  customer.py  customer_bootstrap.py  db.py  discount_stub.py  errors.py  executor.py  identity.py  onboarding.py  org_tree.py  pack.py  parser.py  permission.py  pg_data_repo.py  pg_ontology_repo.py  repository.py  scheduler.py  schemas.py  state_machine.py  tenant.py  tool_manifest.py  tools.py  workspace.py  workspace_bootstrap.py
agent/routers/: __init__.py  _shared.py  action_logs.py  action_metrics.py  admin.py  auth.py  dashboard.py  webhooks.py
agent/scripts/: import_to_pg.py
agent/sql/: schema.sql
agent/tests/: _clearance_helper.py  conftest.py  test_action_loader.py  test_action_log_e2e.py  test_action_log_entry.py  test_action_log_repo.py  test_action_logs_api.py  test_action_metrics_api.py  test_action_metrics_repo.py  test_actor_trust.py  test_admin_ontology_api.py  test_auth.py  test_bootstrap.py  test_clearance_automation.py  test_customer.py  test_customer_bootstrap.py  test_customer_bootstrap_upgrade.py  test_dashboard_api.py  test_db.py  test_discount.py  test_equipment_repair.py  test_executor.py  test_executor_logging.py  test_governance_hatch.py  test_identity.py  test_main_tenant.py  test_onboarding.py  test_onboarding_e2e.py  test_operators.py  test_org_tree_integration.py  test_pack.py  test_pack_bootstrap.py  test_pack_domain_kinds.py  test_pack_integration.py  (+19 more)
(+994 files in other folders)
