[project]
name = "store-ontology-backend"
version = "0.1.0"
description = "门店临期商品管理后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langchain-openai>=0.3.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.27.0",
    "copilotkit>=0.1.0",
    "ag-ui-langgraph>=0.0.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
